--- a/B2BApp.Web/Views/Account/SaveUser.cshtml
+++ b/B2BApp.Web/Views/Account/SaveUser.cshtml
@@ -60,7 +60,7 @@
 
 
             <div class="input-group">
-                <label for="tedarikciSelect" class="form-label" style="margin-right: 10px;">Sube: </label>
+                <label for="tedarikciSelect" class="form-label" style="margin-right: 10px;">Tedarikci: </label>
                 <select id="tedarikciSelect" placeholder='select item'></select>
             </div>
             <div style="display: flex;justify-content: flex-end;">
