--- a/B2BApp.Web/Views/Home/Index.cshtml
+++ b/B2BApp.Web/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
     let table;
 
     $.ajax({
-        url: 'https://localhost/api/UrunSatisRapor',
+        url: 'https://10.60.60.141/api/UrunSatisRapor',
         crossDomain: true,
         headers: {
             'accept': 'text/plain',
