--- a/B2BApp.Web/Views/Satis/DetayliSatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/DetayliSatisRapor.cshtml
@@ -130,7 +130,7 @@
     function loadTable() {
 
         $.ajax({
-            url: 'https://localhost/api/Satis/GetAllWithDetailsByFilters',
+            url: 'https://10.60.60.141/api/Satis/GetAllWithDetailsByFilters',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -315,7 +315,7 @@
 
         //firmalar load
         $.ajax({
-            url: 'https://localhost/api/Filter/GetFirmaSubeKategoriAll',
+            url: 'https://10.60.60.141/api/Filter/GetFirmaSubeKategoriAll',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -455,7 +455,7 @@
 
         //KATEGORİLER
         $.ajax({
-            url: 'https://localhost/api/kategori/all',
+            url: 'https://10.60.60.141/api/kategori/all',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -506,7 +506,7 @@
 
         //firmlar
         $.ajax({
-            url: 'https://localhost/api/Firma/all',
+            url: 'https://10.60.60.141/api/Firma/all',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
