--- a/B2BApp.Web/Views/Satis/SatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/SatisRapor.cshtml
@@ -89,7 +89,7 @@
     function loadTable() {
 
         $.ajax({
-            url: 'https://localhost/api/Satis/GetAllWithUrunAndSubeByTedarikciId',
+            url: 'https://10.60.60.141/api/Satis/GetAllWithUrunAndSubeByTedarikciId',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -183,7 +183,7 @@
 
         //firmalar load
         $.ajax({
-            url: 'https://localhost/api/Filter/GetFirmaSubeKategoriAll',
+            url: 'https://10.60.60.141/api/Filter/GetFirmaSubeKategoriAll',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
