--- a/B2BApp.Web/Views/Sube/Index.cshtml
+++ b/B2BApp.Web/Views/Sube/Index.cshtml
@@ -73,7 +73,7 @@
             },
             "ajax":
             {
-                "url": "https://localhost/api/Sube/GetSubelerWithFirma",
+                "url": "https://10.60.60.141/api/Sube/GetSubelerWithFirma",
                 'type': 'GET',
                 'beforeSend': function (request) {
                     request.setRequestHeader("Authorization", "Bearer " + "@ViewBag.JwtCookie");
@@ -122,7 +122,7 @@
         getCategoriesUpdate();
 
         $.ajax({
-            url: 'https://localhost/api/Sube/GetSubeWithFirma',
+            url: 'https://10.60.60.141/api/Sube/GetSubeWithFirma',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -153,7 +153,7 @@
         let id = $("#subeId").val();
 
         $.ajax({
-            url: 'https://localhost/api/Sube?subeId='+id,
+            url: 'https://10.60.60.141/api/Sube?subeId='+id,
             crossDomain: true,
             method: 'put',
             headers: {
@@ -197,7 +197,7 @@
                 //console.log(data);
 
                 $.ajax({
-                    url: 'https://localhost/api/Urun?id=' + data,
+                    url: 'https://10.60.60.141/api/Urun?id=' + data,
                     crossDomain: true,
                     method: 'delete',
                     headers: {
@@ -258,7 +258,7 @@
             if (result.isConfirmed) {
                 //console.log($('#firmaSelectSave').val());
                 $.ajax({
-                    url: 'https://localhost/api/Sube',
+                    url: 'https://10.60.60.141/api/Sube',
                     crossDomain: true,
                     method: 'post',
                     headers: {
@@ -293,7 +293,7 @@
     function getFirmalar() {
         // firmaSelectSave
         $.ajax({
-            url: 'https://localhost/api/firma/all',
+            url: 'https://10.60.60.141/api/firma/all',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -320,7 +320,7 @@
     function getCategoriesUpdate() {
         // firmaSelectDrawer
         $.ajax({
-            url: 'https://localhost/api/firma/all',
+            url: 'https://10.60.60.141/api/firma/all',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
