--- a/B2BApp.Web/Views/SubeStok/SubeStokDurum.cshtml
+++ b/B2BApp.Web/Views/SubeStok/SubeStokDurum.cshtml
@@ -93,7 +93,7 @@
 
     function initTable() {
         $.ajax({
-            url: 'https://localhost/api/SubeStok/GetAllWithSubeAndUrunByTedarikciId',
+            url: 'https://10.60.60.141/api/SubeStok/GetAllWithSubeAndUrunByTedarikciId',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -164,7 +164,7 @@
 
         //firmalar load
         $.ajax({
-            url: 'https://localhost/api/Filter/GetFirmaSubeKategoriAll',
+            url: 'https://10.60.60.141/api/Filter/GetFirmaSubeKategoriAll',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
