--- a/B2BApp.Web/Views/Urun/UrunlerRapor.cshtml
+++ b/B2BApp.Web/Views/Urun/UrunlerRapor.cshtml
@@ -33,7 +33,7 @@
 <script type="text/javascript">
     let table;
     $.ajax({
-        url: 'https://localhost/api/Urun/GetUrunlerWithDetailsByTedarikciId',
+        url: 'https://10.60.60.141/api/Urun/GetUrunlerWithDetailsByTedarikciId',
         crossDomain: true,
         headers: {
             'accept': 'text/plain',
