--- a/B2BApp.Web/Views/SubeStok/StokRapor.cshtml
+++ b/B2BApp.Web/Views/SubeStok/StokRapor.cshtml
@@ -93,7 +93,7 @@
 
     function initTable() {
         $.ajax({
-            url: 'https://localhost/api/SubeStok/GetAllWithDetailsByFilters',
+            url: 'https://10.60.60.141/api/SubeStok/GetAllWithDetailsByFilters',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
@@ -162,7 +162,7 @@
 
         //firmalar load
         $.ajax({
-            url: 'https://localhost/api/Filter/GetFirmaSubeKategoriAll',
+            url: 'https://10.60.60.141/api/Filter/GetFirmaSubeKategoriAll',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
