sipariş ekleme yapıldı

--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -329,7 +329,7 @@
                                             </svg>
                                         </i>
                                         <i class="sidenav-mini-icon"> B </i>
-                                        <span class="item-name">Şube Stok</span>
+                                        <span class="item-name">Şube Stokları</span>
                                     </a>
                                 </li>
                                 @* Sube Satis *@
@@ -343,9 +343,25 @@
                                             </svg>
                                         </i>
                                         <i class="sidenav-mini-icon"> B </i>
-                                        <span class="item-name">Şube Satış</span>
+                                        <span class="item-name">Şube Satışları</span>
                                     </a>
                                 </li>
+                                @* Sube Satis *@
+                                <li class="nav-item">
+                                    <a class="nav-link " asp-controller="Siparis" asp-action="index">
+                                        <i class="icon">
+                                            <svg class="icon-10" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 24 24" fill="currentColor">
+                                                <g>
+                                                    <circle cx="12" cy="12" r="8" fill="currentColor"></circle>
+                                                </g>
+                                            </svg>
+                                        </i>
+                                        <i class="sidenav-mini-icon"> B </i>
+                                        <span class="item-name">Siparisler</span>
+                                    </a>
+                                </li>
+
+
                             </ul>
 
 
