--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -37,9 +37,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
-   
 
-     <!--Jquery script-->
+
+    <!--Jquery script-->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <!--Select2 css-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
@@ -55,7 +55,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jszip-3.10.1/dt-2.0.8/b-3.0.2/b-colvis-3.0.2/b-html5-3.0.2/b-print-3.0.2/datatables.min.js"></script>
 
-    
+
 
 </head>
 <body class="  ">
@@ -86,12 +86,12 @@
 
 
 
-                
-                    <h6 class="logo-title ms-3">
-                        <img src="~/assets/images/login/seyhanlar_logo.png" class="img-fluid gradient-main animated-scaleX" alt="images" style="width: 150px;height: 40px;">
-                    </h6>
-               
-               
+
+                <h6 class="logo-title ms-3">
+                    <img src="~/assets/images/login/seyhanlar_logo.png" class="img-fluid gradient-main animated-scaleX" alt="images" style="width: 150px;height: 40px;">
+                </h6>
+
+
             </a>
             <div class="sidebar-toggle" id="sidebarbuton" data-toggle="sidebar" data-active="true">
                 <i class="icon">
@@ -101,9 +101,9 @@
                     </svg>
                 </i>
             </div>
-                <script type="text/javascript">
+            <script type="text/javascript">
                 $(document).ready(function () {
-                   
+
                     // Tüm nav-link elementlerini seç
                     $('#sidebarbuton').click(function () {
                         // H1 elemanını seç
@@ -119,11 +119,11 @@
                         }
                     });
 
-                    
+
                 });
 
 
-                </script>
+            </script>
         </div>
 
         <div class="sidebar-body pt-0 data-scrollbar">
@@ -215,8 +215,19 @@
                             </ul>
                         </li>
                         <!--Raporlar Butonlar Son-->
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" asp-controller="Siparis" asp-action="SiparisRapor">
+                                <i class="icon">
+                                    <svg width="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-20">
+                                        <path opacity="0.4" d="M16.0756 2H19.4616C20.8639 2 22.0001 3.14585 22.0001 4.55996V7.97452C22.0001 9.38864 20.8639 10.5345 19.4616 10.5345H16.0756C14.6734 10.5345 13.5371 9.38864 13.5371 7.97452V4.55996C13.5371 3.14585 14.6734 2 16.0756 2Z" fill="currentColor"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M4.53852 2H7.92449C9.32676 2 10.463 3.14585 10.463 4.55996V7.97452C10.463 9.38864 9.32676 10.5345 7.92449 10.5345H4.53852C3.13626 10.5345 2 9.38864 2 7.97452V4.55996C2 3.14585 3.13626 2 4.53852 2ZM4.53852 13.4655H7.92449C9.32676 13.4655 10.463 14.6114 10.463 16.0255V19.44C10.463 20.8532 9.32676 22 7.92449 22H4.53852C3.13626 22 2 20.8532 2 19.44V16.0255C2 14.6114 3.13626 13.4655 4.53852 13.4655ZM19.4615 13.4655H16.0755C14.6732 13.4655 13.537 14.6114 13.537 16.0255V19.44C13.537 20.8532 14.6732 22 16.0755 22H19.4615C20.8637 22 22 20.8532 22 19.44V16.0255C22 14.6114 20.8637 13.4655 19.4615 13.4655Z" fill="currentColor"></path>
+                                    </svg>
+                                </i>
+                                <span class="item-name">Aktif Siparişler</span>
+                            </a>
+                        </li>
                     }
-                    
+
 
                     @if (@ViewBag.FirmaId == "6682972f420b0208d3d620a7")
                     {
@@ -414,7 +425,7 @@
                                         <span class="item-name">Tedarikci Performans</span>
                                     </a>
                                 </li>
-                                
+
                                 @*Stok Rapor*@
                                 <li class="nav-item">
                                     <a class="nav-link " asp-controller="SubeStok" asp-action="stokrapor">
@@ -429,7 +440,7 @@
                                         <span class="item-name">Stok Rapor</span>
                                     </a>
                                 </li>
-                                
+
                                 @*Kâr Rapor*@
                                 <li class="nav-item">
                                     <a class="nav-link " asp-controller="" asp-action="">
@@ -444,7 +455,7 @@
                                         <span class="item-name">Kâr Rapor</span>
                                     </a>
                                 </li>
-                                
+
 
                             </ul>
 
@@ -516,7 +527,7 @@
                             </svg>
                         </i>
                     </div>
-       
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon">
                             <span class="mt-2 navbar-toggler-bar bar1"></span>
@@ -635,7 +646,7 @@
     <!--Swal script-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-   
+
 
 
 </body>
