--- a/B2BApp.Web/Views/Account/SaveUser.cshtml
+++ b/B2BApp.Web/Views/Account/SaveUser.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h2>Sube Stoklar</h2>
+    <h2>Kullanıcı Ekle</h2>
     <hr />
 
     <div class="" style="display: flex;justify-content: flex-end;">
